--- a/app/public/home.html
+++ b/app/public/home.html
@@ -14,21 +14,22 @@
   <div class="container">
 
     <div class="jumbotron">
-      <h1 class="text-center"><span class="fa fa-fire"></span> Friends Finder</h1>
+      <h1 class="text-center"><span class="glyphicon glyphicon-menu-hamburger"></span>Friends Finder</h1>
       <hr>
-      <h2 class="text-center">We only have 5 tables! Book your seat before they all are gone!</h2>
+      <h2 class="text-center">Let's find you a friend!</h2>
+      <br>
+      <h3 class="text-center">Fill out our short survey and we'll find you the best matched friend!</h3>
       <br>
 
       <div class="text-center">
-        <a href="/tables"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> View Tables</button></a>
-        <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
+        <a href="/survey"><button class="btn btn-lg btn-danger"><span class="fa fa-list-alt"></span>Survey</button></a>
       </div>
 
     </div>
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/tables">API Table Link</a> | <a href="/api/waitlist">API Wait List</a>
+        <p><a href="/api/friends">API Friends List</a>
       </div>
     </footer>
 
