--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,27 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Friends Finder</title>
 
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<head>
+    <meta charset="UTF-8">
+    <title>Friends Finder</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
+
 <body>
 
-  <div class="container">
-    
+    <div class="container">
+        <h2>Survey Questions</h2>
+        <hr>
+        <br>
+        <h3>Your Information</h3>
+        <br>
+        <h4>Name (Required)</h4>
+        <input type="text" id="name" class="form-control" required="">
+        <br>
+        <h4>Link to Photo (Required)</h4>
+        <input type="text" id="photo" class="form-control" required="">
+        <hr>
+        <br>
+        <h3>Question 1</h3>
+        <div class="dropdown">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Answer
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                    <button class="dropdown-item" type="button">(Strongly Disagree)</button>
+                    <button class="dropdown-item" type="button">2</button>
+                    <button class="dropdown-item" type="button">3</button>
+                    <button class="dropdown-item" type="button">4</button>
+                    <button class="dropdown-item" type="button">5 (Strongly Agree)</button>
+                </div>
+            </div>
+            <br>
 
-    <footer class="footer">
-      <div class="container">
-        <p><a href="/api/friends">API Friends List</a>
-      </div>
-    </footer>
 
-  </div>
+
+
+            <br>
+            <footer class="footer">
+                <div class="container">
+                    <p><a href="/api/friend">API Friends List</a>
+                </div>
+            </footer>
+
+        </div>
 
 
 </body>
+
 </html>
