--- a/app/public/home.html
+++ b/app/public/home.html
@@ -29,7 +29,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p><a href="/api/friends">API Friends List</a>
+        <p><a href="/api/friends">Friends List</a>
       </div>
     </footer>
 
