--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -27,29 +27,151 @@
         <hr>
         <br>
         <h3>Question 1</h3>
-        <div class="dropdown">
-            <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Answer
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                    <button class="dropdown-item" type="button">(Strongly Disagree)</button>
-                    <button class="dropdown-item" type="button">2</button>
-                    <button class="dropdown-item" type="button">3</button>
-                    <button class="dropdown-item" type="button">4</button>
-                    <button class="dropdown-item" type="button">5 (Strongly Agree)</button>
-                </div>
-            </div>
+        <h4>You are more factual than hypothetical</h4>
+        <form><div class="form-group">
+                <label for="exampleFormControlSelect1"></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>1 (Strongly Disagree)</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5 (Strongly Agree)</option>
+                </select>
+              </div>
+        </form>
             <br>
-
+            <h3>Question 2</h3>
+            <h4>You like to watch TV</h4>
+            <form><div class="form-group">
+                    <label for="exampleFormControlSelect1"></label>
+                    <select class="form-control" id="exampleFormControlSelect1">
+                      <option>1 (Strongly Disagree)</option>
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                      <option>5 (Strongly Agree)</option>
+                    </select>
+                  </div>
+            </form>
+                <br>
+                <h3>Question 3</h3>
+                <h4>You have a strict routine for yourself</h4>
+        <form><div class="form-group">
+                <label for="exampleFormControlSelect1"></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>1 (Strongly Disagree)</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5 (Strongly Agree)</option>
+                </select>
+              </div>
+        </form>
+            <br>
+            <h3>Question 4</h3>
+            <h4>You like to read</h4>
+        <form><div class="form-group">
+                <label for="exampleFormControlSelect1"></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>1 (Strongly Disagree)</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5 (Strongly Agree)</option>
+                </select>
+              </div>
+        </form>
+            <br>
+            <h3>Question 5</h3>
+            <h4>You like animals</h4>
+        <form><div class="form-group">
+                <label for="exampleFormControlSelect1"></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>1 (Strongly Disagree)</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5 (Strongly Agree)</option>
+                </select>
+              </div>
+        </form>
+            <br>
+            <h3>Question 6</h3>
+            <h4>You like attending parties/social events</h4>
+        <form><div class="form-group">
+                <label for="exampleFormControlSelect1"></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>1 (Strongly Disagree)</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5 (Strongly Agree)</option>
+                </select>
+              </div>
+        </form>
+            <br><h3>Question 7</h3>
+            <h4>You are religious</h4>
+            <form><div class="form-group">
+                    <label for="exampleFormControlSelect1"></label>
+                    <select class="form-control" id="exampleFormControlSelect1">
+                      <option>1 (Strongly Disagree)</option>
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                      <option>5 (Strongly Agree)</option>
+                    </select>
+                  </div>
+            </form>
+                <br>
+                <h3>Question 8</h3>
+                <h4>You like trying new things</h4>
+        <form><div class="form-group">
+                <label for="exampleFormControlSelect1"></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>1 (Strongly Disagree)</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5 (Strongly Agree)</option>
+                </select>
+              </div>
+        </form>
+            <br>
+            <h3>Question 9</h3>
+            <h4>You like doing outdoor activities</h4>
+        <form><div class="form-group">
+                <label for="exampleFormControlSelect1"></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>1 (Strongly Disagree)</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5 (Strongly Agree)</option>
+                </select>
+              </div>
+        </form>
+            <br>
+            <h3>Question 10</h3>
+            <h4>You are an extrovert</h4>
+        <form><div class="form-group">
+                <label for="exampleFormControlSelect1"></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>1 (Strongly Disagree)</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5 (Strongly Agree)</option>
+                </select>
+              </div>
+        </form>
+            <br>
 
 
 
             <br>
             <footer class="footer">
                 <div class="container">
-                    <p><a href="/api/friend">API Friends List</a>
+                    <p><a href="/api/friends">API Friends List</a>
                 </div>
             </footer>
 
