finished survey.html

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -15,6 +15,7 @@
 
     <div class="container">
         <h2>Survey Questions</h2>
+        <a href="/home"><button class="btn btn-sm btn-secondary">Home</button></a>
         <hr>
         <br>
         <h3>Your Information</h3>
@@ -28,154 +29,164 @@
         <br>
         <h3>Question 1</h3>
         <h4>You are more factual than hypothetical</h4>
-        <form><div class="form-group">
+        <form>
+            <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1 (Strongly Disagree)</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5 (Strongly Agree)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5 (Strongly Agree)</option>
                 </select>
-              </div>
+            </div>
         </form>
-            <br>
-            <h3>Question 2</h3>
-            <h4>You like to watch TV</h4>
-            <form><div class="form-group">
-                    <label for="exampleFormControlSelect1"></label>
-                    <select class="form-control" id="exampleFormControlSelect1">
-                      <option>1 (Strongly Disagree)</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5 (Strongly Agree)</option>
-                    </select>
-                  </div>
-            </form>
-                <br>
-                <h3>Question 3</h3>
-                <h4>You have a strict routine for yourself</h4>
-        <form><div class="form-group">
+        <br>
+        <h3>Question 2</h3>
+        <h4>You like to watch TV</h4>
+        <form>
+            <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1 (Strongly Disagree)</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5 (Strongly Agree)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5 (Strongly Agree)</option>
                 </select>
-              </div>
+            </div>
         </form>
-            <br>
-            <h3>Question 4</h3>
-            <h4>You like to read</h4>
-        <form><div class="form-group">
+        <br>
+        <h3>Question 3</h3>
+        <h4>You have a strict routine for yourself</h4>
+        <form>
+            <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1 (Strongly Disagree)</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5 (Strongly Agree)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5 (Strongly Agree)</option>
                 </select>
-              </div>
+            </div>
         </form>
-            <br>
-            <h3>Question 5</h3>
-            <h4>You like animals</h4>
-        <form><div class="form-group">
+        <br>
+        <h3>Question 4</h3>
+        <h4>You like to read</h4>
+        <form>
+            <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1 (Strongly Disagree)</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5 (Strongly Agree)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5 (Strongly Agree)</option>
                 </select>
-              </div>
+            </div>
         </form>
-            <br>
-            <h3>Question 6</h3>
-            <h4>You like attending parties/social events</h4>
-        <form><div class="form-group">
+        <br>
+        <h3>Question 5</h3>
+        <h4>You like animals</h4>
+        <form>
+            <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1 (Strongly Disagree)</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5 (Strongly Agree)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5 (Strongly Agree)</option>
                 </select>
-              </div>
+            </div>
         </form>
-            <br><h3>Question 7</h3>
-            <h4>You are religious</h4>
-            <form><div class="form-group">
-                    <label for="exampleFormControlSelect1"></label>
-                    <select class="form-control" id="exampleFormControlSelect1">
-                      <option>1 (Strongly Disagree)</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5 (Strongly Agree)</option>
-                    </select>
-                  </div>
-            </form>
-                <br>
-                <h3>Question 8</h3>
-                <h4>You like trying new things</h4>
-        <form><div class="form-group">
+        <br>
+        <h3>Question 6</h3>
+        <h4>You like attending parties/social events</h4>
+        <form>
+            <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1 (Strongly Disagree)</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5 (Strongly Agree)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5 (Strongly Agree)</option>
                 </select>
-              </div>
+            </div>
         </form>
-            <br>
-            <h3>Question 9</h3>
-            <h4>You like doing outdoor activities</h4>
-        <form><div class="form-group">
+        <br>
+        <h3>Question 7</h3>
+        <h4>You are religious</h4>
+        <form>
+            <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1 (Strongly Disagree)</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5 (Strongly Agree)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5 (Strongly Agree)</option>
                 </select>
-              </div>
+            </div>
         </form>
-            <br>
-            <h3>Question 10</h3>
-            <h4>You are an extrovert</h4>
-        <form><div class="form-group">
+        <br>
+        <h3>Question 8</h3>
+        <h4>You like trying new things</h4>
+        <form>
+            <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1 (Strongly Disagree)</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5 (Strongly Agree)</option>
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5 (Strongly Agree)</option>
                 </select>
-              </div>
+            </div>
         </form>
-            <br>
+        <br>
+        <h3>Question 9</h3>
+        <h4>You like doing outdoor activities</h4>
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlSelect1"></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+        </form>
+        <br>
+        <h3>Question 10</h3>
+        <h4>You are an extrovert</h4>
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlSelect1"></label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                    <option>1 (Strongly Disagree)</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5 (Strongly Agree)</option>
+                </select>
+            </div>
+        </form>
+        <br>
+        <button class="btn btn-lg btn-danger" type="submit">Submit</button>
+        <br>
+        <hr>
+        <footer class="footer">
+            <div class="container">
+                <p><a href="/api/friends">API Friends List</a>
+            </div>
+        </footer>
 
-
-
-            <br>
-            <footer class="footer">
-                <div class="container">
-                    <p><a href="/api/friends">API Friends List</a>
-                </div>
-            </footer>
-
-        </div>
+    </div>
 
 
 </body>
@@ -183,22 +194,22 @@
 </html>
 
 <script type="text/javascript">
-$(".submit").on("click", function(event){
-    event.preventDefault();
+    $(".submit").on("click", function (event) {
+        event.preventDefault();
 
-    var newFriend = {
-       friendName = $("#friend-name").val().trim(),
-       friendPhoto = $("#friend-photo").val().trim(),
-       friendScore = $("#scores").val().trim
-    };
+        var newFriend = {
+            friendName = $("#friend-name").val().trim(),
+            friendPhoto = $("#friend-photo").val().trim(),
+            friendScore = $("#scores").val().trim
+        };
 
-    console.log(newFriend);
-})
+        console.log(newFriend);
+    })
 
-$.post("api/friends", newFriend, function(data) {
-    $("#friend-name").val("");
-    $("friend-photo").val("");
-    $("friendScore").val("");
+    $.post("api/friends", newFriend, function (data) {
+        $("#friend-name").val("");
+        $("friend-photo").val("");
+        $("friendScore").val("");
     })
 
 </script>
