--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -33,11 +33,11 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                    <option value ="1">1 (Strongly Disagree)</option>
+                    <option value ="2">2</option>
+                    <option value ="3">3</option>
+                    <option value ="4">4</option>
+                    <option value ="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -48,11 +48,11 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                    <option value ="1">1 (Strongly Disagree)</option>
+                    <option value ="2">2</option>
+                    <option value ="3">3</option>
+                    <option value ="4">4</option>
+                    <option value ="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -63,11 +63,11 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                    <option value ="1">1 (Strongly Disagree)</option>
+                    <option value ="2">2</option>
+                    <option value ="3">3</option>
+                    <option value ="4">4</option>
+                    <option value ="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -78,11 +78,11 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                    <option value ="1">1 (Strongly Disagree)</option>
+                    <option value ="2">2</option>
+                    <option value ="3">3</option>
+                    <option value ="4">4</option>
+                    <option value ="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -93,11 +93,11 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                    <option value ="1">1 (Strongly Disagree)</option>
+                    <option value ="2">2</option>
+                    <option value ="3">3</option>
+                    <option value ="4">4</option>
+                    <option value ="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -108,11 +108,11 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                    <option value ="1">1 (Strongly Disagree)</option>
+                    <option value ="2">2</option>
+                    <option value ="3">3</option>
+                    <option value ="4">4</option>
+                    <option value ="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -123,11 +123,11 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                    <option value ="1">1 (Strongly Disagree)</option>
+                        <option value ="2">2</option>
+                        <option value ="3">3</option>
+                        <option value ="4">4</option>
+                        <option value ="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -138,11 +138,11 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                        <option value ="1">1 (Strongly Disagree)</option>
+                        <option value ="2">2</option>
+                        <option value ="3">3</option>
+                        <option value ="4">4</option>
+                        <option value ="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -153,11 +153,11 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1"></label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1 (Strongly Disagree)</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5 (Strongly Agree)</option>
+                    <option value ="1">1 (Strongly Disagree)</option>
+                    <option value ="2">2</option>
+                    <option value ="3">3</option>
+                    <option value ="4">4</option>
+                    <option value ="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
