updated js for survey.html

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -31,13 +31,12 @@
         <h4>You are more factual than hypothetical</h4>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlSelect1"></label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    <option value ="1">1 (Strongly Disagree)</option>
-                    <option value ="2">2</option>
-                    <option value ="3">3</option>
-                    <option value ="4">4</option>
-                    <option value ="5">5 (Strongly Agree)</option>
+                <select class="form-control" id="q1">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -45,14 +44,13 @@
         <h3>Question 2</h3>
         <h4>You like to watch TV</h4>
         <form>
-            <div class="form-group">
-                <label for="exampleFormControlSelect1"></label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    <option value ="1">1 (Strongly Disagree)</option>
-                    <option value ="2">2</option>
-                    <option value ="3">3</option>
-                    <option value ="4">4</option>
-                    <option value ="5">5 (Strongly Agree)</option>
+            <div class="form-group">                
+                <select class="form-control" id="q2">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -61,13 +59,12 @@
         <h4>You have a strict routine for yourself</h4>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlSelect1"></label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    <option value ="1">1 (Strongly Disagree)</option>
-                    <option value ="2">2</option>
-                    <option value ="3">3</option>
-                    <option value ="4">4</option>
-                    <option value ="5">5 (Strongly Agree)</option>
+                <select class="form-control" id="q3">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -76,13 +73,12 @@
         <h4>You like to read</h4>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlSelect1"></label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    <option value ="1">1 (Strongly Disagree)</option>
-                    <option value ="2">2</option>
-                    <option value ="3">3</option>
-                    <option value ="4">4</option>
-                    <option value ="5">5 (Strongly Agree)</option>
+                <select class="form-control" id="q4">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -91,13 +87,12 @@
         <h4>You like animals</h4>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlSelect1"></label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    <option value ="1">1 (Strongly Disagree)</option>
-                    <option value ="2">2</option>
-                    <option value ="3">3</option>
-                    <option value ="4">4</option>
-                    <option value ="5">5 (Strongly Agree)</option>
+                <select class="form-control" id="q5">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -106,13 +101,12 @@
         <h4>You like attending parties/social events</h4>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlSelect1"></label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    <option value ="1">1 (Strongly Disagree)</option>
-                    <option value ="2">2</option>
-                    <option value ="3">3</option>
-                    <option value ="4">4</option>
-                    <option value ="5">5 (Strongly Agree)</option>
+                <select class="form-control" id="q6">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -121,13 +115,12 @@
         <h4>You are religious</h4>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlSelect1"></label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    <option value ="1">1 (Strongly Disagree)</option>
-                        <option value ="2">2</option>
-                        <option value ="3">3</option>
-                        <option value ="4">4</option>
-                        <option value ="5">5 (Strongly Agree)</option>
+                <select class="form-control" id="q7">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -136,13 +129,12 @@
         <h4>You like trying new things</h4>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlSelect1"></label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                        <option value ="1">1 (Strongly Disagree)</option>
-                        <option value ="2">2</option>
-                        <option value ="3">3</option>
-                        <option value ="4">4</option>
-                        <option value ="5">5 (Strongly Agree)</option>
+                <select class="form-control" id="q8">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -151,13 +143,12 @@
         <h4>You like doing outdoor activities</h4>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlSelect1"></label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    <option value ="1">1 (Strongly Disagree)</option>
-                    <option value ="2">2</option>
-                    <option value ="3">3</option>
-                    <option value ="4">4</option>
-                    <option value ="5">5 (Strongly Agree)</option>
+                <select class="form-control" id="q9">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -166,13 +157,12 @@
         <h4>You are an extrovert</h4>
         <form>
             <div class="form-group">
-                <label for="exampleFormControlSelect1"></label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                    <option value ="1">1 (Strongly Disagree)</option>
-                    <option value ="2">2</option>
-                    <option value ="3">3</option>
-                    <option value ="4">4</option>
-                    <option value ="5">5 (Strongly Agree)</option>
+                <select class="form-control" id="q10">
+                    <option value="1">1 (Strongly Disagree)</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5 (Strongly Agree)</option>
                 </select>
             </div>
         </form>
@@ -198,24 +188,26 @@
         event.preventDefault();
 
         var newFriend = {
-            friendName = $("#friend-name").val().trim(),
-            friendPhoto = $("#friend-photo").val().trim(),
-            friendScore = $("#scores").val().trim
+            name = $("#name").val(),
+            photo = $("#photo").val(),
+            scores = [ 
+            $("#q1").val(),
+            $("#q2").val(),
+            $("#q3").val(),
+            $("#q4").val(),
+            $("#q5").val(),
+            $("#q6").val(),
+            $("#q7").val(),
+            $("#q8").val(),
+            $("#q9").val(),
+            $("#q10").val()
+          ]
         };
-
-        console.log(newFriend);
+        
+        $.post("api/friends", newFriend, function (data) {
+            $("#friend-match-name").text(data.name);
+            $("#friend-match-pic").attr("src", data.photo);
+        })
+        
     })
-
-    $.post("api/friends", newFriend, function (data) {
-        if (data) {
-            alert("Thank you for your subbmision!");
-        }
-        else {
-            alert("Oops! Something went wrong, please try again!");
-        }
-        $("#friend-name").val("");
-        $("friend-photo").val("");
-        $("friendScore").val("");
-    })
-
-</script>
+        </script>
